--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <source src="horn.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
+    <div class="text">
+        Coordianten hier einfügen
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
