--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div id="text" class="text hidden">
+        <div id="text" class="hidden">
             Happy Birthday
         </div>
         <img src="party.png" alt="Spinning Image" class="hidden" id="spinning-image">
@@ -24,7 +24,7 @@
         <source src="horn.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
-    <div id="coords" class="text hidden">
+    <div id="coords" class="hidden">
         Coordianten hier einfügen
     </div>
     <script src="script.js"></script>
